# Dataquest

./: .gitignore  .prettierrc  Makefile  README.md  docker-compose.yml  flake.nix  package-lock.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: bootstrap.py  main.py
backend/app/ai/: __init__.py  form_generation.py
backend/app/core/: config.py  logging.py  middleware.py  request_context.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  form.py  refresh_token.py  user.py
backend/app/routes/: auth.py  dependencies.py  forms.py  validation.py
backend/app/schemas/: __init__.py  agent.py  auth.py  form.py  form_record.py  form_response.py  form_version.py
backend/app/services/: auth_session.py  forms_access.py
backend/migrations/: README  env.py
backend/migrations/versions/: 20260619_0001_initial_forms.py  20260620_0002_users_and_form_ownership.py  20260621_0003_form_accepting_responses.py  20260621_0004_form_archiving.py  20260621_0005_login_required_forms.py  20260621_0006_refresh_tokens.py  20260621_0007_refresh_token_session_family.py
backend/tests/: test_agent_schema.py  test_app_startup.py  test_auth_api.py  test_db_session.py  test_form_response_schema.py  test_form_schema.py  test_forms_api.py
client/: package-lock.json  package.json
client/public/: index.html
frontend/: .env.example  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
server/: .env.example  app.js  app.ts  config.ts  package-lock.json  package.json  tsconfig.json
(+124 files in other folders)
