[project]
name = "dataquest-backend"
version = "0.1.0"
description = "Dataquest API"
requires-python = ">=3.12"
dependencies = [
  "alembic",
  "fastapi",
  "httpx",
  "pydantic",
  "sqlalchemy",
  "uvicorn",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
